--- a/шаблон — личный кабинет — ближайшие занятия.html
+++ b/шаблон — личный кабинет — ближайшие занятия.html
@@ -51,13 +51,13 @@
                 </a>
             </li>
             <li>
-                <a href="">
-                    <img class="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20—%20история%20занятий.html"><span>История занятий</span>
+                <a href="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20—%20история%20занятий.html">
+                    <img class="" src="https://cdn.nyutonika.ru/icons-lk/order-history-lk.svg"><span>История занятий</span>
                 </a>
             </li>
             <li>
-                <a href="">
-                    <img class="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20—%20пакеты%20занятий.html" src="https://cdn.nyutonika.ru/icons-lk/package-lk2.svg"><span>Пакеты занятий</span>
+                <a href="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20—%20пакеты%20занятий.html">
+                    <img class="" src="https://cdn.nyutonika.ru/icons-lk/package-lk2.svg"><span>Пакеты занятий</span>
                 </a>
             </li>
         </ul>
