--- a/шаблон — личный кабинет — пакеты занятий.html
+++ b/шаблон — личный кабинет — пакеты занятий.html
@@ -126,12 +126,11 @@
             <div class="page-lk">
                 <h1 class="uk-text-left uk-margin-top">Пакеты занятий</h1>
                 <div class="packages-text">
-                    <p>Контракт: 1</p>
                     <p>Ученик: Тестовый ученик 1</p>
                     <p>Учитель: Тестовый логопед</p>
                 </div>
                 <div class="uk-margin-large-top">
-                    <ul class="uk-grid-match uk-grid-small  uk-child-width-1-3@xl uk-child-width-1-2@l uk-child-width-1-2@m uk-child-width-1-1@s"
+                    <ul class="uk-grid-match uk-grid-small uk-margin-large-bottom uk-child-width-1-3@xl uk-child-width-1-2@l uk-child-width-1-2@m uk-child-width-1-1@s"
                         uk-sortable="handle: .card-lk" uk-grid>
                         <li>
                             <div class="card-lk activity-packages packag1">
@@ -140,11 +139,8 @@
                                     <p class="activity-packages_content_pricetext">Цена:</p>
                                     <p class="activity-packages_content_price"><span>500</span>руб.</p>
                                 </div>
-                                <div class="card-lk_button_activity-packages">
-                                    <button type="submit">
-                                        <a href="" target="_blank">Купить</a>
-                                    </button>
-                                </div>
+                                <button type="submit" class="card-lk_button_activity-packages">Купить</button>
+
                             </div>
                         </li>
                         <li>
@@ -154,11 +150,7 @@
                                     <p class="activity-packages_content_pricetext">Цена:</p>
                                     <p class="activity-packages_content_price"><span>1800</span>руб.</p>
                                 </div>
-                                <div class="card-lk_button_activity-packages">
-                                    <button type="submit">
-                                        <a href="" target="_blank">Купить</a>
-                                    </button>
-                                </div>
+                                <button type="submit" class="card-lk_button_activity-packages">Купить</button>
                             </div>
                         </li>
                         <li>
@@ -168,11 +160,7 @@
                                     <p class="activity-packages_content_pricetext">Цена:</p>
                                     <p class="activity-packages_content_price"><span>3400</span>руб.</p>
                                 </div>
-                                <div class="card-lk_button_activity-packages">
-                                    <button type="submit">
-                                        <a href="" target="_blank">Купить</a>
-                                    </button>
-                                </div>
+                                <button type="submit" class="card-lk_button_activity-packages">Купить</button>
                             </div>
                         </li>
                         <li>
@@ -182,11 +170,7 @@
                                     <p class="activity-packages_content_pricetext">Цена:</p>
                                     <p class="activity-packages_content_price"><span>6400</span>руб.</p>
                                 </div>
-                                <div class="card-lk_button_activity-packages">
-                                    <button type="submit">
-                                        <a href="" target="_blank">Купить</a>
-                                    </button>
-                                </div>
+                                <button type="submit" class="card-lk_button_activity-packages">Купить</button>
                             </div>
                         </li>
                         <li>
@@ -196,23 +180,12 @@
                                     <p class="activity-packages_content_pricetext">Цена:</p>
                                     <p class="activity-packages_content_price"><span>12000</span>руб.</p>
                                 </div>
-                                <div class="card-lk_button_activity-packages">
-                                    <button type="submit">
-                                        <a href="" target="_blank">Купить</a>
-                                    </button>
-                                </div>
+                                <button type="submit" class="card-lk_button_activity-packages">Купить</button>
                             </div>
                         </li>
 
                     </ul>
-                    <ul class="uk-pagination uk-flex-center uk-margin-medium">
-                        <li><a href="#"><span uk-pagination-previous></span></a></li>
-                        <li><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li class="uk-disabled"><span>...</span></li>
-                        <li><a href="#">5</a></li>
-                        <li><a href="#"><span uk-pagination-next></span></a></li>
-                    </ul>
+
                 </div>
 
             </div>
